feat: don't let the cowsay say something

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,6 +3,10 @@ roles_path = ./roles
 inventory = inventory
 no_log = True
 
+# don't like cows?  that's unfortunate. Cowsay.
+# set to 1 if you don't want cowsay support or export ANSIBLE_NOCOWS=1
+nocows = 1
+
 [ssh_connection]
 pipelining = True
 control_path = /tmp/ansible-ssh-%%h-%%p-%%r
