--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,8 @@ jobs:
 
         # You can override MegaLinter flavor used to have faster performances
         # More info at https://megalinter.io/latest/flavors/
-        uses: oxsecurity/megalinter/flavors/cupcake@v7.11.1
+        # uses: oxsecurity/megalinter/flavors/cupcake@v7.11.1
+        uses: oxsecurity/megalinter/flavors/cupcake@03986e6993ccf699a22451118520680b438e7d2a
 
         id: ml
 
