--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -4,7 +4,7 @@
 # linters documentation
 
 # all, none, or list of linter keys
-APPLY_FIXES: all
+APPLY_FIXES: none
 
 # If you use ENABLE variable, all other languages/formats/tooling-formats will
 # be disabled by default
@@ -13,6 +13,9 @@ APPLY_FIXES: all
 # If you use ENABLE_LINTERS variable, all other linters will be disabled by
 # default
 # ENABLE_LINTERS:
+DISABLE_LINTERS:
+- SPELL_CSPELL
+
 EXCLUDED_DIRECTORIES: [".git", "node_modules", "roles"]
 # DISABLE:
 # - COPYPASTE # Uncomment to disable checks of excessive copy-pastes
