--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -12,7 +12,7 @@
     name: "{{ item.name | default(item) }}"
     state: "{{ item.state | default('present') }}"
     version: "{{ item.version | default(omit) }}"
-    global: yes
+    global: true
     executable: "{{ item.executable | default(omit) }}"
   with_items: "{{ npm_packages }}"
 
